linkCard を改善
